# recoup

./: .gitignore  README.md  app.json  args.json  classify_args.json  classify_input.json  design.md  executa.json  extract.py  manifest.json  pyproject.toml  recoup_plugin.py  run.cmd  run_invoke.js  save_test.json  scan_out.json  scan_raw.json  server.js  single_test.json  small_scan.json  technical audit.md  test_emails.json
.anna/: app.json  dev-app.json  dev-executa.json  executa.json  executas.lock.json
bundle/: anna-tool-ids.js  app.js  index.html  mock-sdk.js  style.css
executas/recoup/: recoup_plugin.py
skill/recoup-playbook/: SKILL.md  executa.json
skill/recoup-playbook/.anna/: executa.json
tool_mccloned_recoup_q35vp3wj.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
